<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.compoundcalculator.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/money_growth"/>

    <Button
        android:id="@+id/btn_activity_compoundcalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator_bunga_majemuk"/>

    <Button
        android:id="@+id/btn_activity_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apa_itu_bunga_majemuk"/>

    <Button
        android:id="@+id/btn_activity_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tentang_kami"/>

</LinearLayout>