<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txt_start_capital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_capital"/>

    <EditText
        android:id="@+id/edt_start_capital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txt_start_capital"
        android:inputType="number"
        android:lines="1"/>

    <TextView
        android:id="@+id/txt_annual_growth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_start_capital"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/annual_growth_year"/>

    <EditText
        android:id="@+id/edt_annual_growth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_annual_growth"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="numberDecimal"
        android:lines="1"/>

    <TextView
        android:id="@+id/txt_number_of_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_annual_growth"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/number_of_year"/>

    <EditText
        android:id="@+id/edt_number_of_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_number_of_year"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:inputType="number"
        android:lines="1"/>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_number_of_year"
        android:text="@string/reset"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/btn_reset"
        android:layout_below="@+id/edt_number_of_year"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_calculate"
        android:gravity="center"
        android:textStyle="bold"/>


</RelativeLayout>